# garmin-messenger

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apps/cli/: README.md  pyproject.toml
apps/cli/src/garmin_messenger_cli/: contacts.py  main.py
apps/cli/tests/: conftest.py  test_cli_contacts.py  test_cli_conversations.py  test_cli_device_metadata.py  test_cli_group.py  test_cli_listen.py  test_cli_login.py  test_cli_members.py  test_cli_messages.py  test_cli_mute.py  test_cli_muted.py  test_cli_network.py  test_cli_send.py  test_cli_yaml.py
apps/go-cli/: README.md  go.mod  go.sum  main.go
apps/go-cli/cmd/: contacts.go  conversations.go  device_metadata.go  fcm_register.go  listen.go  listen_test.go  login.go  login_test.go  mcp.go  media.go  members.go  messages.go  mute.go  muted.go  network.go  output.go  registrations.go  root.go  send.go  status.go  sync_contacts.go
apps/go-cli/internal/contacts/: contacts.go
apps/go-cli/internal/mcpserver/: listen.go  resources.go  server.go  server_test.go  tools.go
apps/openclaw-plugin/: README.md  build.mjs  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
apps/openclaw-plugin/scripts/: postinstall.mjs
apps/openclaw-plugin/src/: agent-tools.test.ts  agent-tools.ts  binary.test.ts  binary.ts  channel.test.ts  channel.ts  debug.ts  mcp-bridge.test.ts  mcp-bridge.ts  onboarding.test.ts  onboarding.ts  platform.ts  postinstall.test.ts  runtime.ts  types.ts
apps/python-cli/: README.md  pyproject.toml
apps/python-cli/src/garmin_messenger_cli/: __init__.py  main.py
apps/python-cli/tests/: conftest.py  test_cli_contacts.py  test_cli_conversations.py  test_cli_group.py  test_cli_listen.py  test_cli_media.py  test_cli_members.py  test_cli_messages.py  test_cli_muted.py  test_cli_network.py  test_cli_yaml.py
clients/go/: README.md  api.go  auth_test.go  go.mod  go.sum  models_test.go  signalr.go
clients/python/: README.md
clients/python/src/garmin_messenger/: __init__.py  auth.py  models.py
clients/python/tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_ota_uuid.py
docs/: api-reference.md  openclaw-channel.md
lib/go/: README.md  api_test.go  auth.go  auth_test.go  doc.go  go.mod  go.sum  models.go  models_test.go  otauuid.go  otauuid_test.go  signalr_test.go
lib/go/fcm/: client.go  client_test.go  constants.go  device.go  device_test.go  doc.go  gcm.go  gcm_test.go  mcs.go  mcs_test.go
lib/go/internal/checkinpb/: gm_android_checkin.pb.go  gm_checkin.pb.go
lib/go/internal/mcspb/: gm_mcs.pb.go
lib/go/proto/: generate.sh  gm_android_checkin.proto  gm_checkin.proto  gm_mcs.proto
lib/python/: README.md  pyproject.toml
lib/python/src/garmin_messenger/: __init__.py  api.py  models.py  signalr.py
lib/python/tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_signalr.py
scripts/: python-create-env.sh  python-run-tests.sh  python_create_env.sh
scripts/hooks/: pre-push
tests/fixtures/: batch_status_update_response.json  conversation_detail.json  conversation_members.json  device_metadata.json  get_conversations.json  media_download_url.json  message_full.json  message_simple.json  muted_conversations.json  network_properties.json  registration_confirm.json  send_message_media_response.json  send_message_response.json  signalr_status_update.json  updated_statuses.json
