[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-messenger"
version = "1.0.0"
description = "Unofficial Garmin Messenger API client for communicating with InReach satellite devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["garmin", "messenger", "inreach", "satellite", "signalr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "garth>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "signalrcore>=0.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_messenger"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/garmin_messenger/models.py" = ["N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
